--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="banner-gif">
         <img id="banner" src="./public/images/mid.gif" alt="banner" />
       </div>
-      <h1>Will you be my valentine?</h1>
+      <h1>mero pyaro budo, will you be my valentine?</h1>
       <div class="buttons">
         <button id="yes-button"><p>Yes</p></button>
         <button id="no-button"><p>No</p></button>
       </div>
       <div class="message">
-        <h2>Yepppie, see you sooonnn :3</h2>
+        <h2>HUZZAH! see you when you come to sydney my lumpy espace princess</h2>
         
-        <h6>Creator: @notsarvesh</h6>
+        <h6>your budo, @notsarvesh</h6>
       </div>
     </div>
     <script src="./public/js/script.js"></script>
